testing fix for jumbotron image wrong size on mobile

--- a/app/styles/jumbotron.sass
+++ b/app/styles/jumbotron.sass
@@ -14,7 +14,7 @@
 	background-repeat: no-repeat
 	background-size: cover
 	background-position: center center
-	background-attachment: fixed
+	// background-attachment: fixed
 	color: $jumbo-color
 	position: relative
 	overflow: hidden
